--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     implementation('org.projectlombok:lombok')
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+    compile 'org.elasticsearch.client:elasticsearch-rest-high-level-client:6.4.0'
 }
 
 task buildDocker(type: Docker, dependsOn: build) {
