1. connect, disconnect 기능 구현 2. 기본 CRUD 및 range 쿼리 기능 구현.

--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     implementation('org.springframework.retry:spring-retry')
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
+
+    implementation 'com.google.firebase:firebase-admin:6.5.0'
+   
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     implementation('org.projectlombok:lombok')
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
