1. 스웨거 작업 및 auth 해제

--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,10 @@ dependencies {
     implementation('org.projectlombok:lombok')
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     compile 'org.elasticsearch.client:elasticsearch-rest-high-level-client:6.4.0'
+
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.2.2'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.2.2'
+
 }
 
 task buildDocker(type: Docker, dependsOn: build) {
